remove the NOVO!

--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,5 +1,5 @@
 {
-    "__MyLocaleLanguage__": "Português Novo!",
+    "__MyLocaleLanguage__": "Português",
     "__maintaner__": "http://github/averissimo",
 
     "title": "YakYak - Cliente Hangouts",
